fix: address all PR #3 review feedback
CRITICAL fixes:
- Pin git dependencies to version tags (pyproject.toml)
- Fix Kafka idempotence config conflict (disable idempotence, use app-level retries)
- Fix blocking Kafka commit (use asynchronous=True)
- Implement DLQ routing with full message context

MAJOR fixes:
- Migrate Pydantic v1 Config to v2 ConfigDict pattern
- Remove unused statistics tracking variables
- Implement actual DLQ topic routing with error context

MINOR fixes:
- Fix comment count mismatch "(11)" → "(4)"
- Update event type regex to allow hyphens
- Change success default to False (fail-safe)
- Remove flaky CI performance assertion
- Fix STOP_WORDS/DOMAIN_BOOSTERS overlap
- Use sum-based score normalization (softmax-style)
- Enhance circuit breaker test with state verification

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,9 +31,9 @@ black = "^24.10.0"
 isort = "^5.13.0"
 
 [tool.poetry.group.core.dependencies]
-omnibase-core = {git = "https://github.com/OmniNode-ai/omnibase_core.git", branch = "main"}
-omnibase-spi = {git = "https://github.com/OmniNode-ai/omnibase_spi.git", branch = "main"}
-omninode-bridge = {git = "https://github.com/OmniNode-ai/omninode_bridge.git", branch = "main"}
+omnibase-core = {git = "https://github.com/OmniNode-ai/omnibase_core.git", tag = "v0.1.0"}
+omnibase-spi = {git = "https://github.com/OmniNode-ai/omnibase_spi.git", tag = "v0.1.0"}
+omninode-bridge = {git = "https://github.com/OmniNode-ai/omninode_bridge.git", tag = "v0.1.0"}
 
 [project]
 name = "omniintelligence"
