--- a/migration_sources/omniarchon/services/intelligence/pyproject.toml
+++ b/migration_sources/omniarchon/services/intelligence/pyproject.toml
@@ -19,7 +19,7 @@ asyncpg = "^0.29.0"  # Aligned with omnibase-core
 numpy = "^1.24.3"
 requests = "^2.31.0"
 # Vector database and storage
-qdrant-client = "~1.7.0"  # Match server version 1.7.4
+qdrant-client = "^1.9.0"  # Minimum 1.9.0 for security (CVE fix)
 redis = "^5.0.0"  # Valkey (Redis fork) cache client
 prometheus-client = "^0.23.1"
 scipy = "^1.16.2"
