--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,26 +14,25 @@ packages = [{include = "omniintelligence", from = "src"}]
 python = ">=3.12,<4.0"
 pydantic = "^2.9.0"
 pydantic-settings = "^2.6.0"
-httpx = "^0.27.0"
+httpx = ">=0.27.0"
 tenacity = "^9.0.0"
 confluent-kafka = "^2.6.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
 pytest-asyncio = "^0.24.0"
-pytest-cov = "^5.0.0"
+pytest-cov = ">=5.0.0"
 pytest-mock = "^3.12.0"
 pytest-timeout = "^2.3.0"
 pytest-xdist = "^3.5.0"
-ruff = "^0.7.0"
-mypy = "^1.13.0"
+ruff = ">=0.7.0"
+mypy = ">=1.13.0"
 black = "^24.10.0"
 isort = "^5.13.0"
 
 [tool.poetry.group.core.dependencies]
-omnibase-core = {git = "https://github.com/OmniNode-ai/omnibase_core.git", tag = "v0.1.0"}
-omnibase-spi = {git = "https://github.com/OmniNode-ai/omnibase_spi.git", tag = "v0.1.0"}
-omninode-bridge = {git = "https://github.com/OmniNode-ai/omninode_bridge.git", tag = "v0.1.0"}
+omnibase-core = "0.3.4"
+omnibase-spi = "0.2.0"
 
 [project]
 name = "omniintelligence"
@@ -71,8 +70,8 @@ dev = [
 # Core node system dependencies
 core = [
     # ONEX ecosystem dependencies
-    "omnibase_core @ git+https://github.com/OmniNode-ai/omnibase_core.git@v0.1.0",
-    "omnibase_spi @ git+https://github.com/OmniNode-ai/omnibase_spi.git@v0.1.0",
+    "omnibase-core>=0.3.4",
+    "omnibase-spi>=0.2.0",
     # Web framework for API endpoints
     "fastapi>=0.104.0",
     "uvicorn>=0.24.0",
@@ -110,8 +109,8 @@ core = [
 # All dependencies for development and testing
 all = [
     # Include all core dependencies
-    "omnibase_core @ git+https://github.com/OmniNode-ai/omnibase_core.git@v0.1.0",
-    "omnibase_spi @ git+https://github.com/OmniNode-ai/omnibase_spi.git@v0.1.0",
+    "omnibase-core>=0.3.4",
+    "omnibase-spi>=0.2.0",
     "fastapi>=0.104.0",
     "uvicorn>=0.24.0",
     "python-multipart>=0.0.20",
