feat: implement complete ONEX node infrastructure with Docker deployment
## Node Implementations (7 new nodes)
- vectorization_compute: OpenAI embeddings with SentenceTransformers/TF-IDF fallback
- quality_scoring_compute: AST-based code analysis (complexity, docs, security)
- entity_extraction_compute: Python AST entity extraction (functions, classes, imports)
- relationship_detection_compute: Code relationship detection (CALLS, IMPORTS, EXTENDS)
- kafka_event_effect: Kafka event publishing with retry and circuit breaker
- qdrant_vector_effect: Vector storage with similarity search
- memgraph_graph_effect: Graph storage for entities and relationships
- postgres_pattern_effect: Pattern storage with lineage tracking

## Docker Infrastructure
- Updated Dockerfiles to install core dependencies (omnibase_core, asyncpg, neo4j)
- Configured docker-compose to use omninode-bridge network for shared infra
- Added entity-extraction-compute and relationship-detection-compute services
- Fixed health checks and container initialization

## Fixes
- Added __main__.py entry points for all nodes
- Fixed compute node container argument initialization
- Updated network configuration for cross-repo connectivity
- Fixed Qdrant health check (removed curl dependency)

--- a/deployment/docker/Dockerfile.compute
+++ b/deployment/docker/Dockerfile.compute
@@ -15,16 +15,18 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 RUN pip install --no-cache-dir uv==0.5.0
 
 # Copy project files
-COPY pyproject.toml .
+COPY pyproject.toml uv.lock README.md ./
 COPY src/ src/
 
-# Install dependencies
-RUN uv pip install --system --no-cache -e .
+# Install base dependencies + core group (includes omnibase_core, httpx, confluent-kafka, etc.)
+RUN uv sync --group core --frozen
 
+# Add virtual environment to PATH and set PYTHONPATH
+ENV PATH="/app/.venv/bin:$PATH"
 ENV PYTHONPATH=/app/src
 
 # Expose health check port
 EXPOSE 8000
 
-# Run compute node
-CMD python -m omniintelligence.nodes.${NODE_NAME}.v1_0_0.compute
+# Run compute node (uses __main__.py in the v1_0_0 package)
+CMD ["sh", "-c", "python -m omniintelligence.nodes.${NODE_NAME}.v1_0_0"]
