--- a/deployment/docker/docker-compose.yml
+++ b/deployment/docker/docker-compose.yml
@@ -1,64 +1,31 @@
 # ============================================================================
 # OmniIntelligence - Base Infrastructure
 # ============================================================================
-# Purpose: Core data layer infrastructure for ONEX 4.0 architecture
+# Purpose: OmniIntelligence-specific data layer infrastructure
 # Services:
-# - PostgreSQL: FSM state, pattern lineage, workflow tracking
-# - Qdrant: Vector embeddings storage
-# - Memgraph: Knowledge graph (entities and relationships)
-# - Valkey: Distributed cache
-# - Redpanda: Kafka-compatible event streaming
+#   - Qdrant: Vector embeddings storage (intelligence-specific)
+#   - Memgraph: Knowledge graph (entities and relationships)
+#
+# Shared Infrastructure (from omninode-bridge):
+#   - PostgreSQL: omninode-bridge-postgres (internal network)
+#   - Redpanda: omninode-bridge-redpanda:9092 (internal), 192.168.86.200:29092 (external)
+#   - Valkey: omninode-bridge-valkey:6379
+#   - Consul: omninode-bridge-consul:28500
+#   - Vault: omninode-bridge-vault:8200
+#
+# Network: Uses external omninode-bridge-network for cross-repo connectivity
 # ============================================================================
 
 name: omniintelligence
 
 networks:
-  omni-network:
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 172.28.0.0/16
+  omninode-bridge-network:
+    external: true
 
 services:
 
   # ============================================================================
-  # PostgreSQL - FSM State + Pattern Lineage + Workflow Tracking
-  # ============================================================================
-
-  postgres:
-    image: postgres:16-alpine
-    container_name: omni-postgres
-    ports:
-      - "${POSTGRES_PORT:-5432}:5432"
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB:-omniintelligence}
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?POSTGRES_PASSWORD must be set}
-      # Performance tuning
-      POSTGRES_SHARED_BUFFERS: ${POSTGRES_SHARED_BUFFERS:-256MB}
-      POSTGRES_MAX_CONNECTIONS: ${POSTGRES_MAX_CONNECTIONS:-200}
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ../database/migrations:/docker-entrypoint-initdb.d:ro
-    networks:
-      - omni-network
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    restart: unless-stopped
-    deploy:
-      resources:
-        limits:
-          memory: 1G
-          cpus: '1.0'
-        reservations:
-          memory: 512M
-          cpus: '0.5'
-
-  # ============================================================================
-  # Qdrant - Vector Embeddings Storage
+  # Qdrant - Vector Embeddings Storage (OmniIntelligence-specific)
   # ============================================================================
 
   qdrant:
@@ -70,9 +37,9 @@ services:
     volumes:
       - qdrant_data:/qdrant/storage
     networks:
-      - omni-network
+      - omninode-bridge-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:6333/health"]
+      test: ["CMD-SHELL", "bash -c 'echo > /dev/tcp/localhost/6333'"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -102,7 +69,7 @@ services:
     environment:
       MEMGRAPH_LOG_LEVEL: ${MEMGRAPH_LOG_LEVEL:-INFO}
     networks:
-      - omni-network
+      - omninode-bridge-network
     healthcheck:
       test: ["CMD", "nc", "-z", "localhost", "7687"]
       interval: 10s
@@ -118,109 +85,7 @@ services:
           memory: 512M
           cpus: '0.25'
 
-  # ============================================================================
-  # Valkey - Distributed Cache
-  # ============================================================================
-
-  valkey:
-    image: valkey/valkey:7.2-alpine
-    container_name: omni-valkey
-    ports:
-      - "${VALKEY_PORT:-6379}:6379"
-    command: >
-      valkey-server
-      --requirepass ${VALKEY_PASSWORD:?VALKEY_PASSWORD must be set}
-      --maxmemory 512mb
-      --maxmemory-policy allkeys-lru
-      --save 60 1000
-    volumes:
-      - valkey_data:/data
-    networks:
-      - omni-network
-    healthcheck:
-      test: ["CMD", "valkey-cli", "--pass", "${VALKEY_PASSWORD}", "ping"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    restart: unless-stopped
-    deploy:
-      resources:
-        limits:
-          memory: 512M
-          cpus: '0.5'
-        reservations:
-          memory: 128M
-          cpus: '0.1'
-
-  # ============================================================================
-  # Redpanda - Kafka-compatible Event Streaming
-  # ============================================================================
-
-  redpanda:
-    image: docker.redpanda.com/redpandadata/redpanda:v23.3.5
-    container_name: omni-redpanda
-    command:
-      - redpanda
-      - start
-      - --kafka-addr internal://0.0.0.0:9092,external://0.0.0.0:19092
-      - --advertise-kafka-addr internal://redpanda:9092,external://localhost:19092
-      - --pandaproxy-addr internal://0.0.0.0:8082,external://0.0.0.0:18082
-      - --advertise-pandaproxy-addr internal://redpanda:8082,external://localhost:18082
-      - --schema-registry-addr internal://0.0.0.0:8081,external://0.0.0.0:18081
-      - --rpc-addr redpanda:33145
-      - --advertise-rpc-addr redpanda:33145
-      - --smp 1
-      - --memory 1G
-      - --reserve-memory 0M
-      - --overprovisioned
-      - --node-id 0
-      - --check=false
-    ports:
-      - "${REDPANDA_KAFKA_PORT:-19092}:19092"
-      - "${REDPANDA_ADMIN_PORT:-9644}:9644"
-      - "${REDPANDA_PROXY_PORT:-18082}:18082"
-      - "${REDPANDA_SCHEMA_PORT:-18081}:18081"
-    volumes:
-      - redpanda_data:/var/lib/redpanda/data
-    networks:
-      - omni-network
-    healthcheck:
-      test: ["CMD-SHELL", "rpk cluster health | grep -q 'Healthy:.*true' || exit 1"]
-      interval: 15s
-      timeout: 10s
-      retries: 5
-      start_period: 30s
-    restart: unless-stopped
-    deploy:
-      resources:
-        limits:
-          memory: 1G
-          cpus: '1.0'
-        reservations:
-          memory: 512M
-          cpus: '0.5'
-
-  # ============================================================================
-  # Redpanda Console - Kafka UI
-  # ============================================================================
-
-  redpanda-console:
-    image: docker.redpanda.com/redpandadata/console:v2.4.5
-    container_name: omni-redpanda-console
-    ports:
-      - "${REDPANDA_CONSOLE_PORT:-8080}:8080"
-    environment:
-      KAFKA_BROKERS: redpanda:9092
-    networks:
-      - omni-network
-    depends_on:
-      - redpanda
-    restart: unless-stopped
-
 volumes:
-  postgres_data:
   qdrant_data:
   memgraph_data:
   memgraph_log:
-  valkey_data:
-  redpanda_data:
